tests/reject/base_mismatch_arg.ty
# A base-type mismatch at a call argument (string into an int param): clean diagnostic.
fn f(n: int):
    println(str(n))
fn main():
    f("h")
